--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </br>
     <header>
    <img src="C:\Users\lenovo\Pictures\sanjeen.jpg" align="center" width="300" height="300">
-        <h1>NARMADHA J</h1>
+        <h1>SANTHOSH KUMAR M</h1>
     </header>
     <div class="container">
         <section class="resume">
@@ -112,7 +112,7 @@ Highly motivated and enthusiastic fresher with a strong interest in software dev
                     <strong>Sri Krishna Adithya College of Arts & Science  </strong> - BACHELOR OF COMPUTER SCIENCE (BSC), 2021-2024
                 </li>
  		<li>
-                <strong> HINDUSTHAN MATRICULATION</strong> -  HIGHER SECONDARY SCHOOL
+                <strong> TANCEM EDUCATIONAL TRUST MATRIC </strong> -  HIGHER SECONDARY SCHOOL
 	    </li>
             </ul>
 
@@ -144,10 +144,10 @@ Highly motivated and enthusiastic fresher with a strong interest in software dev
             </ul>
         </section>
     </div>
- <p style="color: black;text-align: center;font-size: *-large;font-style: italic;" ><b>NARMADHA J</b></p>
-            <p style="color: black;text-align: center;font-size: large;font-style: italic;"><span><b>&#64</b></span> 21bsit225narmadhaj@skacas.ac.in </p>
-            <p style="color: black;text-align: center;font-size: large;font-style: italic;"><span><b>&#9906</b></span> PULIYAKULAM , Coimbatore</p>
-            <p style="color: black;text-align: center;font-size: large;font-style: italic;"><span><b>&#9990</b></span> Ph.xxxxxx0401</p>
+ <p style="color: black;text-align: center;font-size: *-large;font-style: italic;" ><b>SANTHOSH KUMAR M</b></p>
+            <p style="color: black;text-align: center;font-size: large;font-style: italic;"><span><b>&#64</b></span> 21bsit231santhoshkumarm@skacas.ac.in </p>
+            <p style="color: black;text-align: center;font-size: large;font-style: italic;"><span><b>&#9906</b></span> 209/5 WEST STREET SUNDANGULAM ALANGULAM (POST) VIRUDHUNAGAR (DIST)</p>
+            <p style="color: black;text-align: center;font-size: large;font-style: italic;"><span><b>&#9990</b></span> Ph.xxxxxx626127</p>
             <form align="center">
             <button>view more</button>
 </body>
