--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <br>
 </br>
     <header>
-   <img src="C:\Users\lenovo\Pictures\sanjeen.jpg" align="center" width="300" height="300">
+   <img src="Santhosh.jpg" align="center" width="300" height="300">
         <h1>SANTHOSH KUMAR M</h1>
     </header>
     <div class="container">
